--- a/herbals.html
+++ b/herbals.html
@@ -110,7 +110,7 @@
       <div class="container">
         <div class="row no-gutters slider-text align-items-center justify-content-center" data-scrollax-parent="true">
           <div class="col-md-8 ftco-animate text-center">
-            <h1 class="mb-3 bread">Events</h1>
+            <h1 class="mb-3 bread">Herbals&nbsp;</h1>
           </div>
         </div>
       </div>
@@ -120,61 +120,24 @@
       <div class="container">
         <div class="row justify-content-center mb-5 pb-3">
           <div class="col-md-7 heading-section ftco-animate text-center">
-            <h2 class="mb-4">Upcoming Events</h2>
+            <h2 class="mb-4">HERBAL RECIPES</h2>
           </div>
         </div>
         <div class="row d-flex">
           <div class="col-md-6 ftco-animate">
             <div class="blog-entry align-self-stretch d-flex">
-              <a href="blog-single.html" class="block-20 order-md-last" style="background-image: url('images/sacral-course.png');">
+              <a href="blog-single.html" class="block-20 order-md-last" style="background-image: url('images/stinging.jpg');">
               </a>
               <div class="text p-4 d-block">
               	<div class="meta mb-3">
-                  <div><a href="#">October 15th, 2023 | 6:30-8:30 pm</a></div>
+                  <div><a href="#">September 28th, 2023</a></div>
                 </div>
-                <h3 class="heading mt-3"><a href="https://www.blockhouseyoga.com/monthly-updates-events/">Sacral Revival with Tracy & Tya</a></h3>
+                <h3 class="heading mt-3">Stinging Nettle Infusion</h3>
                 <p>
-Join us next Sunday for an evening of tea, essential oils, reflexology, chakra balancing and more! Rev up your sacral chakra and get your mood in balance as we prepare for shorter days and longer nights. <br><b>Register: tracy.balancetobliss@gmail.com</b></p>
-              </div>
-            </div>
-          </div>
-          </div>
-          <br><br>
-          <div class="row justify-content-center mb-5 pb-3">
-            <div class="col-md-7 heading-section ftco-animate text-center">
-              <h2 class="mb-4">Past Events</h2>
-            </div>
-          </div>
-        <div class="row d-flex">
-          <div class="col-md-6 ftco-animate">
-            <div class="blog-entry align-self-stretch d-flex">
-              <a href="blog-single.html" class="block-20 order-md-last" style="background-image: url('images/autumnroot.jpg');">
-              </a>
-              <div class="text p-4 d-block">
-              	<div class="meta mb-3">
-                  <div><a href="#">September 28th, 2023 | 7-9 pm</a></div>
-                </div>
-                <h3 class="heading mt-3"><a href="https://www.blockhouseyoga.com/monthly-updates-events/">Autumn Root Boost Featuring Tracy</a></h3>
-                <p>
-Are you having difficulty getting up in the morning?<br>
-Are your hands and feet always cold?<br>
-Want to boost your immune system for the fall?<br>
-Join guest speaker Tracy and I for an evening of yoga, supportive tea infusion, frequency and Chakras as we prepare for the fall season together.<br><br>
-<b>Register: tracy.balancetobliss@gmail.com</b></p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 ftco-animate">
-            <div class="blog-entry align-self-stretch d-flex">
-              <a href="blog-single.html" class="block-20 order-md-last" style="background-image: url('images/spiritualfair.jpg');">
-              </a>
-              <div class="text p-4 d-block">
-              	<div class="meta mb-3">
-                  <div><a href="#">September 23rd, 2023 |&nbsp; 10am-3pm </a></div>
-                </div>
-                <h3 class="heading mt-3"><a href="#">Spiritual Fair Bridgewater&nbsp;</a></h3>
-                <p>Come join me and a myriad of alternative medicine practitioners, Intuitives, tea vendors, crystal suppliers, and more at the Bridgewater Legion.</p>
-                <p>Hosted by Corrine&nbsp; &nbsp;</p>
+
+From our Root Chakra workshop!<br>
+<br><br>
+<b>Download: <a style="color: cornflowerblue" href="images/nettle.pdf">stinging-nettle-infusion.pdf</a></p>
               </div>
             </div>
           </div>
