--- a/catalogue.html
+++ b/catalogue.html
@@ -161,51 +161,86 @@ function loadProducts() {
 				},
 				{
 					"id": "12", 
-					"name": "Red Light Roller",
-					"description": "These essences (roller balls) have been designed through an alchemy process using the healing power of crystalline structures, geometric patterns, cosmic vibrations, to open your energy centres so they are functioning actively, radiantly & strongly.",
+					"name": "Rainbow Roller",
+					"description": "These roller balls have been designed through an alchemy process using the healing power of crystalline structures, geometric patterns, cosmic vibrations, to open your energy centres so they are functioning actively, radiantly & strongly.",
+					"image": "./images/rainbow-light.webp",
+					"category": "Colour Energy"
+				},
+				{
+					"id": "12", 
+					"name": "Pink Roller",
+					"description": "These roller balls have been designed through an alchemy process using the healing power of crystalline structures, geometric patterns, cosmic vibrations, to open your energy centres so they are functioning actively, radiantly & strongly.",
+					"image": "./images/pink-light.webp",
+					"category": "Colour Energy"
+				},
+				{
+					"id": "12", 
+					"name": "Turquoise Roller",
+					"description": "These roller balls have been designed through an alchemy process using the healing power of crystalline structures, geometric patterns, cosmic vibrations, to open your energy centres so they are functioning actively, radiantly & strongly.",
+					"image": "./images/turquoise-light.webp",
+					"category": "Colour Energy"
+				},
+				{
+					"id": "12", 
+					"name": "Red Roller",
+					"description": "These roller balls have been designed through an alchemy process using the healing power of crystalline structures, geometric patterns, cosmic vibrations, to open your energy centres so they are functioning actively, radiantly & strongly.",
 					"image": "./images/red-light.webp",
 					"category": "Colour Energy"
 				},
 				{
 					"id": "13", 
-					"name": "Orange Light Roller",
-					"description": "These essences (roller balls) have been designed through an alchemy process using the healing power of crystalline structures, geometric patterns, cosmic vibrations, to open your energy centres so they are functioning actively, radiantly & strongly.",
+					"name": "Orange Roller",
+					"description": "These roller balls have been designed through an alchemy process using the healing power of crystalline structures, geometric patterns, cosmic vibrations, to open your energy centres so they are functioning actively, radiantly & strongly.",
 					"image": "./images/orange-light.webp",
 					"category": "Colour Energy"
 				},
 				{
 					"id": "14", 
-					"name": "Yellow Light Roller",
-					"description": "These essences (roller balls) have been designed through an alchemy process using the healing power of crystalline structures, geometric patterns, cosmic vibrations, to open your energy centres so they are functioning actively, radiantly & strongly.",
+					"name": "Yellow Roller",
+					"description": "These roller balls have been designed through an alchemy process using the healing power of crystalline structures, geometric patterns, cosmic vibrations, to open your energy centres so they are functioning actively, radiantly & strongly.",
 					"image": "./images/yellow-light.webp",
 					"category": "Colour Energy"
 				},
 				{
 					"id": "15", 
-					"name": "Green Light Roller",
-					"description": "These essences (roller balls) have been designed through an alchemy process using the healing power of crystalline structures, geometric patterns, cosmic vibrations, to open your energy centres so they are functioning actively, radiantly & strongly.",
+					"name": "Green Roller",
+					"description": "These roller balls have been designed through an alchemy process using the healing power of crystalline structures, geometric patterns, cosmic vibrations, to open your energy centres so they are functioning actively, radiantly & strongly.",
 					"image": "./images/green-light.webp",
 					"category": "Colour Energy"
 				},
 				{
 					"id": "16", 
-					"name": "Blue Light Roller",
-					"description": "These essences (roller balls) have been designed through an alchemy process using the healing power of crystalline structures, geometric patterns, cosmic vibrations, to open your energy centres so they are functioning actively, radiantly & strongly.",
+					"name": "Blue Roller",
+					"description": "These roller balls have been designed through an alchemy process using the healing power of crystalline structures, geometric patterns, cosmic vibrations, to open your energy centres so they are functioning actively, radiantly & strongly.",
 					"image": "./images/blue-light.webp",
 					"category": "Colour Energy"
 				},
 				{
 					"id": "17", 
-					"name": "Indigo Light Roller",
-					"description": "These essences (roller balls) have been designed through an alchemy process using the healing power of crystalline structures, geometric patterns, cosmic vibrations, to open your energy centres so they are functioning actively, radiantly & strongly.",
+					"name": "Indigo Roller",
+					"description": "These roller balls have been designed through an alchemy process using the healing power of crystalline structures, geometric patterns, cosmic vibrations, to open your energy centres so they are functioning actively, radiantly & strongly.",
 					"image": "./images/indigo-light.webp",
 					"category": "Colour Energy"
 				},
 				{
 					"id": "17", 
-					"name": "Violet Light Roller",
-					"description": "These essences (roller balls) have been designed through an alchemy process using the healing power of crystalline structures, geometric patterns, cosmic vibrations, to open your energy centres so they are functioning actively, radiantly & strongly.",
+					"name": "Violet Roller",
+					"description": "These roller balls have been designed through an alchemy process using the healing power of crystalline structures, geometric patterns, cosmic vibrations, to open your energy centres so they are functioning actively, radiantly & strongly.",
 					"image": "./images/violet-light.webp",
+					"category": "Colour Energy"
+				},
+				{
+					"id": "2",
+					"name": "Guardian Angel Spray",
+					"description": "The concept behind these high powered Spiritual Sprays are to remind the body's energy field of it's original \"colour\" blueprint. Restoring balance to imbalances, in turn our body, mind & spirit can return to a harmonic state.",
+					"image": "./images/guardian-spray.webp",
+					"category": "Colour Energy"
+				},
+				{
+					"id": "2",
+					"name": "Unconditional Love Spray",
+					"description": "The concept behind these high powered Spiritual Sprays are to remind the body's energy field of it's original \"colour\" blueprint. Restoring balance to imbalances, in turn our body, mind & spirit can return to a harmonic state.",
+					"image": "./images/pink-spray.webp",
 					"category": "Colour Energy"
 				},
 				{
