--- a/about.html
+++ b/about.html
@@ -307,7 +307,7 @@
                     </span>
                   </div>
                   <div class="text">
-                    <p class="mb-5">Let there be light. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+                    <p class="mb-5">Let there be light. Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
                     <p class="name">Dennis Green</p>
                     <span class="position">Patient</span>
                   </div>
@@ -321,7 +321,7 @@
                     </span>
                   </div>
                   <div class="text">
-                    <p class="mb-5">Let there be light. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+                    <p class="mb-5">Let there be light. Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
                     <p class="name">Dennis Green</p>
                     <span class="position">Patient</span>
                   </div>
@@ -335,7 +335,7 @@
                     </span>
                   </div>
                   <div class="text">
-                    <p class="mb-5">Let there be light. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+                    <p class="mb-5">Let there be light. Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
                     <p class="name">Dennis Green</p>
                     <span class="position">Patient</span>
                   </div>
@@ -349,7 +349,7 @@
                     </span>
                   </div>
                   <div class="text">
-                    <p class="mb-5">Let there be light. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+                    <p class="mb-5">Let there be light. Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
                     <p class="name">Dennis Green</p>
                     <span class="position">Doctor</span>
                   </div>
@@ -367,7 +367,7 @@
           <div class="row d-flex justify-content-center">
             <div class="col-md-7 text-center heading-section heading-section-white ftco-animate">
               <h2>Subcribe to our Newsletter</h2>
-              <p>Let there be light. Separated they live in</p>
+              <p>Let there be light.</p>
               <div class="row d-flex justify-content-center mt-5">
                 <div class="col-md-8">
                   <form action="#" class="subscribe-form">
