--- a/events.html
+++ b/events.html
@@ -126,15 +126,15 @@
         <div class="row d-flex">
           <div class="col-md-6 ftco-animate">
             <div class="blog-entry align-self-stretch d-flex">
-              <a href="blog-single.html" class="block-20 order-md-last" style="background-image: url('images/sacral-course.png');">
+              <a href="blog-single.html" class="block-20 order-md-last" style="background-image: url('images/holistic-fair.jpeg');">
               </a>
               <div class="text p-4 d-block">
               	<div class="meta mb-3">
-                  <div><a href="#">October 15th, 2023 | 6:30-8:30 pm</a></div>
+                  <div><a href="#">October 28th / 29th, 2023  <br> 10:00am-5:00 pm ; 10:00am-4pm</a></div>
                 </div>
-                <h3 class="heading mt-3"><a href="https://www.blockhouseyoga.com/monthly-updates-events/">Sacral Revival with Tracy & Tya</a></h3>
+                <h3 class="heading mt-3"><a href="">Holistic Fair</a></h3>
                 <p>
-Join us next Sunday for an evening of tea, essential oils, reflexology, chakra balancing and more! Rev up your sacral chakra and get your mood in balance as we prepare for shorter days and longer nights. <br><b>Register: tracy.balancetobliss@gmail.com</b></p>
+Join me this Saturday & Sunday Holistic Healing Fall Fair where I will be offering Biopulsar consoltations and more. <br><br><b>Locationed at the Best Western Plus in Bridgewater</b></p>
               </div>
             </div>
           </div>
@@ -145,8 +145,9 @@ Join us next Sunday for an evening of tea, essential oils, reflexology, chakra b
               <h2 class="mb-4">Past Events</h2>
             </div>
           </div>
-        <div class="row d-flex">
-          <div class="col-md-6 ftco-animate">
+		  
+		          <div class="row d-flex">
+					            <div class="col-md-6 ftco-animate">
             <div class="blog-entry align-self-stretch d-flex">
               <a href="blog-single.html" class="block-20 order-md-last" style="background-image: url('images/autumnroot.jpg');">
               </a>
@@ -164,6 +165,21 @@ Join guest speaker Tracy and I for an evening of yoga, supportive tea infusion, 
               </div>
             </div>
           </div>
+          <div class="col-md-6 ftco-animate">
+            <div class="blog-entry align-self-stretch d-flex">
+              <a href="blog-single.html" class="block-20 order-md-last" style="background-image: url('images/sacral-course.png');">
+              </a>
+              <div class="text p-4 d-block">
+              	<div class="meta mb-3">
+                  <div><a href="#">October 15th, 2023 | 6:30-8:30 pm</a></div>
+                </div>
+                <h3 class="heading mt-3"><a href="https://www.blockhouseyoga.com/monthly-updates-events/">Sacral Revival with Tracy & Tya</a></h3>
+                <p>
+Join us next Sunday for an evening of tea, essential oils, reflexology, chakra balancing and more! Rev up your sacral chakra and get your mood in balance as we prepare for shorter days and longer nights. <br><b>Register: tracy.balancetobliss@gmail.com</b></p>
+              </div>
+            </div>
+          </div>
+        <div class="row d-flex">
           <div class="col-md-6 ftco-animate">
             <div class="blog-entry align-self-stretch d-flex">
               <a href="blog-single.html" class="block-20 order-md-last" style="background-image: url('images/spiritualfair.jpg');">
@@ -188,7 +204,7 @@ Join guest speaker Tracy and I for an evening of yoga, supportive tea infusion, 
           <div class="row d-flex justify-content-center">
             <div class="col-md-7 text-center heading-section heading-section-white ftco-animate">
               <h2>Subcribe to our Newsletter</h2>
-              <p>Let there be light. Separated they live in</p>
+              <p>Let there be light.</p>
               <div class="row d-flex justify-content-center mt-5">
                 <div class="col-md-8">
                   <form action="#" class="subscribe-form">
