--- a/events.html
+++ b/events.html
@@ -124,8 +124,41 @@
           </div>
         </div>
         <div class="row d-flex">
-          <div class="col-md-6 ftco-animate">
+          <div class="col-md-9 ftco-animate">
             <div class="blog-entry align-self-stretch d-flex">
+              <a href="blog-single.html" class="block-20 order-md-last" style="background-image: url('images/innerlight.jpg');">
+              </a>
+              <div class="text p-4 d-block">
+              	<div class="meta mb-3">
+                  <div><a href="#">Nov 17th / 17th, 2023  <br>
+                  6:30 PM - 8:30 PM</a></div>
+                </div>
+                <h3 class="heading mt-3"><a href="">Inner Light Solar Plexus WorkShop</a></h3>
+                <p> Are you looking to connect with your inner-light?
+Want to learn about the ego, and ways to keep your boundaries strong and in balance?
+Curious about natural ways to increase detoxification? <br> <br>
+
+Join Tracy and I for an evening of yoga, tea, frequency, and Chakras as we connect with our inner light, together.
+
+We look forward to sharing this beautiful space with you. <br>
+                  <br>
+				  </p>
+                <p>Register: tracy.balancetobliss@gmail.com</p>
+              </div>
+            </div>
+          </div>
+          </div>
+          <br><br>
+    <div class="row justify-content-center mb-5 pb-3">
+      <div class="col-md-7 heading-section ftco-animate text-center">
+        <h2 class="mb-4">Past Events</h2>
+      </div>
+    </div>
+
+    <div class="events-container d-flex flex-wrap justify-content-between">
+	  <!-- Event Entry 1 -->
+      <div class="event-entry col-md-6 ftco-animate">
+        <div class="blog-entry align-self-stretch d-flex">
               <a href="blog-single.html" class="block-20 order-md-last" style="background-image: url('images/holistic-fair.jpeg');">
               </a>
               <div class="text p-4 d-block">
@@ -136,67 +169,68 @@
                 <p>
 Join me this Saturday & Sunday Holistic Healing Fall Fair where I will be offering Biopulsar consoltations and more. <br><br><b>Locationed at the Best Western Plus in Bridgewater</b></p>
               </div>
+        </div>
+      </div>
+		
+      <!-- Event Entry 1 -->
+      <div class="event-entry col-md-6 ftco-animate">
+        <div class="blog-entry align-self-stretch d-flex">
+          <a href="blog-single.html" class="block-20 order-md-last" style="background-image: url('images/autumnroot.jpg');">
+          </a>
+          <div class="text p-4 d-block">
+            <div class="meta mb-3">
+              <div><a href="#">September 28th, 2023 | 7-9 pm</a></div>
             </div>
-          </div>
-          </div>
-          <br><br>
-          <div class="row justify-content-center mb-5 pb-3">
-            <div class="col-md-7 heading-section ftco-animate text-center">
-              <h2 class="mb-4">Past Events</h2>
-            </div>
-          </div>
-		  
-		          <div class="row d-flex">
-					            <div class="col-md-6 ftco-animate">
-            <div class="blog-entry align-self-stretch d-flex">
-              <a href="blog-single.html" class="block-20 order-md-last" style="background-image: url('images/autumnroot.jpg');">
-              </a>
-              <div class="text p-4 d-block">
-              	<div class="meta mb-3">
-                  <div><a href="#">September 28th, 2023 | 7-9 pm</a></div>
-                </div>
-                <h3 class="heading mt-3"><a href="https://www.blockhouseyoga.com/monthly-updates-events/">Autumn Root Boost Featuring Tracy</a></h3>
-                <p>
-Are you having difficulty getting up in the morning?<br>
-Are your hands and feet always cold?<br>
-Want to boost your immune system for the fall?<br>
-Join guest speaker Tracy and I for an evening of yoga, supportive tea infusion, frequency and Chakras as we prepare for the fall season together.<br><br>
-<b>Register: tracy.balancetobliss@gmail.com</b></p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 ftco-animate">
-            <div class="blog-entry align-self-stretch d-flex">
-              <a href="blog-single.html" class="block-20 order-md-last" style="background-image: url('images/sacral-course.png');">
-              </a>
-              <div class="text p-4 d-block">
-              	<div class="meta mb-3">
-                  <div><a href="#">October 15th, 2023 | 6:30-8:30 pm</a></div>
-                </div>
-                <h3 class="heading mt-3"><a href="https://www.blockhouseyoga.com/monthly-updates-events/">Sacral Revival with Tracy & Tya</a></h3>
-                <p>
-Join us next Sunday for an evening of tea, essential oils, reflexology, chakra balancing and more! Rev up your sacral chakra and get your mood in balance as we prepare for shorter days and longer nights. <br><b>Register: tracy.balancetobliss@gmail.com</b></p>
-              </div>
-            </div>
-          </div>
-        <div class="row d-flex">
-          <div class="col-md-6 ftco-animate">
-            <div class="blog-entry align-self-stretch d-flex">
-              <a href="blog-single.html" class="block-20 order-md-last" style="background-image: url('images/spiritualfair.jpg');">
-              </a>
-              <div class="text p-4 d-block">
-              	<div class="meta mb-3">
-                  <div><a href="#">September 23rd, 2023 |&nbsp; 10am-3pm </a></div>
-                </div>
-                <h3 class="heading mt-3"><a href="#">Spiritual Fair Bridgewater&nbsp;</a></h3>
-                <p>Come join me and a myriad of alternative medicine practitioners, Intuitives, tea vendors, crystal suppliers, and more at the Bridgewater Legion.</p>
-                <p>Hosted by Corrine&nbsp; &nbsp;</p>
-              </div>
-            </div>
+            <h3 class="heading mt-3"><a href="https://www.blockhouseyoga.com/monthly-updates-events/">Autumn Root Boost Featuring Tracy</a></h3>
+            <p>
+              Are you having difficulty getting up in the morning?<br>
+              Are your hands and feet always cold?<br>
+              Want to boost your immune system for the fall?<br>
+              Join guest speaker Tracy and I for an evening of yoga, supportive tea infusion, frequency and Chakras as we prepare for the fall season together.<br><br>
+              <b>Register: tracy.balancetobliss@gmail.com</b>
+            </p>
           </div>
         </div>
       </div>
-    </section>
+
+      <!-- Event Entry 2 -->
+      <div class="event-entry col-md-6 ftco-animate">
+        <div class="blog-entry align-self-stretch d-flex">
+          <a href="blog-single.html" class="block-20 order-md-last" style="background-image: url('images/sacral-course.png');">
+          </a>
+          <div class="text p-4 d-block">
+            <div class="meta mb-3">
+              <div><a href="#">October 15th, 2023 | 6:30-8:30 pm</a></div>
+            </div>
+            <h3 class="heading mt-3"><a href="https://www.blockhouseyoga.com/monthly-updates-events/">Sacral Revival with Tracy & Tya</a></h3>
+            <p>
+              Join us next Sunday for an evening of tea, essential oils, reflexology, chakra balancing and more! Rev up your sacral chakra and get your mood in balance as we prepare for shorter days and longer nights. <br><b>Register: tracy.balancetobliss@gmail.com</b>
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Event Entry 3 -->
+      <div class="event-entry col-md-6 ftco-animate">
+        <div class="blog-entry align-self-stretch d-flex">
+          <a href="blog-single.html" class="block-20 order-md-last" style="background-image: url('images/spiritualfair.jpg');">
+          </a>
+          <div class="text p-4 d-block">
+            <div class="meta mb-3">
+              <div><a href="#">September 23rd, 2023 |&nbsp; 10am-3pm</a></div>
+            </div>
+            <h3 class="heading mt-3"><a href="#">Spiritual Fair Bridgewater&nbsp;</a></h3>
+            <p>
+              Come join me and a myriad of alternative medicine practitioners, Intuitives, tea vendors, crystal suppliers, and more at the Bridgewater Legion.<br>
+              Hosted by Corrine&nbsp; &nbsp;
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
 		
 		<section class="ftco-section-parallax">
       <div class="parallax-img d-flex align-items-center">
