--- a/catalogue - Copy [2].html
+++ b/catalogue - Copy [2].html
@@ -93,7 +93,7 @@
 <div class="container mt-0">
     <div class="row justify-content-center mb-5 pb-3">
         <div class="col-md-7 heading-section ftco-animate text-center">
-            <h2 class="mt-4">Our ProductS</h2>
+            <h2 class="mt-4">Our ProductS&nbsp;</h2>
         </div>
     </div>
     <div class="row" id="productsContainer">
