--- a/herbals.html
+++ b/herbals.html
@@ -51,48 +51,28 @@
         <ul class="navbar-nav ml-auto" style="justify-content: center; margin-right: auto; margin-left: auto;">
           <li class="nav-item"><a href="index.html" class="nav-link main-menu">Home</a></li>
 		  <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle main-menu" href="catalogue.html" id="navbarDropdown" role="button" data-toggle="dropdown"
+            <a class="nav-link main-menu" href="catalogue.html" role="button" 
               aria-haspopup="true" aria-expanded="false">
             Store
           </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="catalogue.html">Catalogue</a>
-              <a class="dropdown-item" href="storefront.html">Storefront</a>
-              <a class="dropdown-item" href="local.html">Local</a>
-              <a class="dropdown-item" href="donate.html">Donate</a>
-            </div>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle main-menu" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+            <a class="nav-link main-menu" href="events.html" role="button" 
               aria-haspopup="true" aria-expanded="false">
-            Glow-Up</a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="biopulsar.html">Biopulsar</a>
-              <a class="dropdown-item" href="success.html">Success</a>
-            </div>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle main-menu" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-              aria-haspopup="true" aria-expanded="false">
-              Society
+              Events
             </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="events.html">Events</a>
-              <a class="dropdown-item" href="market.html">Market</a>
-              <a class="dropdown-item" href="newsletter.html">Newsletter</a>
-            </div>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle main-menu" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+            <a class="nav-link main-menu" href="herbals.html" role="button" 
               aria-haspopup="true" aria-expanded="false">
-              Health
+              Herbals
             </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="articles.html">Health Articles</a>
-              <a class="dropdown-item" href="nutrition.html">Nutrition</a>
-              <a class="dropdown-item" href="herbals.html">Herbals</a>
-              <a class="dropdown-item" href="lifestyle.html">Lifestyle</a>
-            </div>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link main-menu" href="testimonials.html" role="button" 
+              aria-haspopup="true" aria-expanded="false">
+              Testimonials
+            </a>
           </li>
         </ul>
         <ul class="navbar-nav ml-auto main-menu" style="justify-content: center; margin-right: auto; margin-left: auto;">
